--- a/src/assets/scss/elements/_header.scss
+++ b/src/assets/scss/elements/_header.scss
@@ -10,6 +10,11 @@
       list-style: none;
       text-transform: uppercase;
 
+      @media only screen and (max-width: 600px) {
+        display: grid;
+        flex-direction: column;
+      }
+
     }
     .menu-list a{
       text-decoration: none;
