--- a/src/assets/scss/elements/_header.scss
+++ b/src/assets/scss/elements/_header.scss
@@ -1,54 +1,153 @@
-.header {
-  background-color: #F7E0D4;
-  .header__wrapper {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    .menu-list {
-      display: flex;
-      font-family: 'Sriracha', cursive;
-      list-style: none;
-      text-transform: uppercase;
+//.header__wrapper {
+//  background-color: whitesmoke;
+//  width: 100%;
+//  height: 100px;
+//  display: flex;
+//  justify-content: space-around;
+//  align-items: center;
+//  position: sticky;
+//  top: 0;
+//
+//  .menu-list {
+//    display: flex;
+//      font-family: 'Sriracha', cursive;
+//      list-style: none;
+//      text-transform: uppercase;
+//
+//    @media only screen and (max-width: 805px) {
+//      display: grid;
+//      flex-direction: column;
+//    }
+//
+//  }
+//
+//  .menu-list a {
+//    text-decoration: none;
+//  }
+//
+//  .menu-item {
+//    padding: 10px 10px;
+//    color: #BFAE87;
+//    margin-right: 20px;
+//    font-size: 1.6rem;
+//
+//  }
+//
+//  .menu-item:hover {
+//    color: #A57DB4;
+//  }
+//
+//  .logo-text {
+//    font-size: 4rem;
+//    font-family: 'Arizonia', cursive;
+//    letter-spacing: 2px;
+//    background-image: linear-gradient(270deg, #A57DB4, #BFAE87);
+//    -webkit-background-clip: text;
+//    color: transparent;
+//
+//    @media only screen and (max-width: 600px) {
+//      text-wrap: normal;
+//      font-size: 3rem;
+//    }
+//  }
+//
+//}
+.header__wrapper {
+  background-color: whitesmoke;
+  height: 100px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  position: sticky;
+  top: 0;
+  .logo-text {
+    font-family: 'Arizonia', cursive;
+    background-image: linear-gradient(270deg, #A57DB4, #BFAE87);
+    -webkit-background-clip: text;
+    color: transparent;
+    font-size: 38px;
+    padding: 0 100px;
+    font-weight: bold;
 
-      @media only screen and (max-width: 600px) {
-        display: grid;
-        flex-direction: column;
-      }
+  }
+}
 
-    }
-    .menu-list a{
-      text-decoration: none;
-    }
-    .menu-item {
-      padding: 10px 10px;
-      color: #342B09;
-      margin-right: 20px;
-      font-size: 1.6rem;
+.menu-list {
+  margin-right: 20px;
 
-    }
-    .menu-item:hover {
-      color: #FC600A;
-    }
-    .logo-text {
-      font-size: 5rem;
-      font-family: 'Arizonia', cursive;
-      letter-spacing: 2px;
-      background-image: linear-gradient(270deg, deeppink, gold);
-      -webkit-background-clip: text;
-      color: transparent;
-    }
-    //.header__socials {
-    //  display: grid;
-    //  flex-direction: column;
-    //  font-size: 2.5rem;
-    //  margin-right: 3%;
-    //
-    //}
-    //.socials-icon {
-    //  color: grey;
-    //}
-    //.socials-icon:hover {
-    //  color: dodgerblue;
-    //}
+}
+.nav-item {
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
+
+}
+.list-item {
+  color: #658F70;
+  font-size: 17px;
+  padding: 7px 13px;
+  border-radius: 3px;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-family: 'Raleway', sans-serif;
+
+
+}
+a.active, a:hover {
+  background-color: white;
+  transition: .5s;
+}
+.checkbtn {
+  font-size: 30px;
+  color: #658F70;
+  line-height: 80px;
+  float: right;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none;
+}
+#check {
+  display: none;
+}
+@media only screen and (max-width: 952px) {
+  .logo-text{
+    font-size: 30px;
+    padding-left: 50px;
+  }
+  .list-item {
+    font-size: 16px;
+
+  }
+}
+@media only screen and (max-width: 1060px) {
+  .checkbtn{
+    display: block;
+  }
+  .menu-list {
+    position: fixed;
+    width: 30%;
+    height: 100vh;
+    background-color: #594C5D;
+    top: 84px;
+    left: -100%;
+    text-align: center;
+    transition: all .5s;
+
+  }
+  .nav-item{
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+  }
+  .list-item {
+    font-size: 20px;
+  }
+  a:hover,a.active{
+    background-color: transparent;
+    color: #A57DB4;
+  }
+  #check:checked ~ ul{
+    left: 0;
   }
 }
