--- a/src/assets/scss/elements/_hero.scss
+++ b/src/assets/scss/elements/_hero.scss
@@ -6,14 +6,14 @@
   display: flex;
   //justify-content: center;
   //align-items: center;
-  height: 80vh;
+  height: calc(100vh - 100px);
   width: 100%;
   .hero__socials {
     position: fixed;
     display: grid;
     flex-direction: column;
     justify-content: center;
-    margin-top: 4%;
+    margin-top: 12%;
     font-family: 'Sriracha', cursive;
     transform: translate(-378px, 0);
   }
@@ -25,7 +25,7 @@
     display: block;
     margin: 0.3rem;
     padding: 8%;
-    width: 180%;
+    width: 170%;
     text-align: right;
     border-radius: 50px;
     transition: 0.7s;
@@ -59,18 +59,10 @@
     color: rgb(255, 66, 77)
   }
 }
-.hero-text {
-  width: 80%;
-  font-family: 'Arizonia', cursive;
-  font-size: 2rem;
-  color: white;
-  opacity: 0.9;
-  margin: auto;
 
-}
 
 .heroB {
-  height: 70vh;
+  height: 80vh;
   width: 100%;
-  background-color: lightblue;
+  background-color: #594C5D;
 }
