--- a/src/assets/scss/elements/_hero.scss
+++ b/src/assets/scss/elements/_hero.scss
@@ -14,8 +14,8 @@
     flex-direction: column;
     justify-content: center;
     margin-top: 12%;
-    font-family: 'Sriracha', cursive;
-    transform: translate(-378px, 0);
+    font-family: $main-font;
+    transform: translate(-360px, 0);
   }
   .socials-icon {
     color: #fff;
