--- a/src/assets/scss/elements/_header.scss
+++ b/src/assets/scss/elements/_header.scss
@@ -67,7 +67,7 @@
     -webkit-background-clip: text;
     color: transparent;
     font-size: 38px;
-    padding: 0 100px;
+    padding-right: 100px;
     font-weight: bold;
 
   }
@@ -90,7 +90,7 @@
   border-radius: 3px;
   text-transform: uppercase;
   text-decoration: none;
-  font-family: 'Raleway', sans-serif;
+  font-family: $main-font;
 
 
 }
