--- a/src/assets/scss/elements/_contactform.scss
+++ b/src/assets/scss/elements/_contactform.scss
@@ -23,6 +23,7 @@
 
 
 }
+
 .form_hdl {
   color: #8D8572;
   font-family: $main-font;
@@ -58,6 +59,7 @@ form input, form textarea {
   border-radius: 15px;
   width: 15vw;
   margin: 20px auto 0;
+  z-index: 999;
 
 }
 .form-btn:hover{
@@ -109,6 +111,7 @@ form input, form textarea {
     font-family: $main-font;
     font-size: 20px;
     font-weight: 700;
+    color: #8D8572;
   }
 }
 
