--- a/src/assets/scss/elements/_footer.scss
+++ b/src/assets/scss/elements/_footer.scss
@@ -1,5 +1,49 @@
 .footer {
-  background-color: #BFAE87;
-  height: 30vh;
-  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  background-color: #594C5D;
+  .footer-menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 10px 30px;
+    .footer-nav{
+      font-family: $main-font;
+      list-style: none;
+      display: grid;
+      margin-left: 50px;
+      font-size: 20px;
+      .f-nav-items a {
+        color: #8D8572;
+        background-color: transparent;
+        text-decoration: none;
+      }
+      .f-nav-items a:hover {
+        color: #BFAE87;
+      }
+    }
+  }
+  .f-socials{
+    color: #BFAE87;
+    width: 300px;
+    display: flex;
+    justify-content: space-around;
+    font-size: 30px;
+  }
+  .copyright {
+    text-align: right;
+    color: #8D8572;
+    font-family: $main-font;
+    .designer{
+      text-decoration: none;
+      background-color: transparent;
+      color: whitesmoke;
+    }
+  }
+
 }
+
+
+
