--- a/src/assets/scss/elements/_header.scss
+++ b/src/assets/scss/elements/_header.scss
@@ -61,6 +61,7 @@
   justify-content: space-around;
   position: sticky;
   top: 0;
+  z-index: 100;
   .logo-text {
     font-family: 'Arizonia', cursive;
     background-image: linear-gradient(270deg, #A57DB4, #BFAE87);
