--- a/src/assets/scss/elements/_hero.scss
+++ b/src/assets/scss/elements/_hero.scss
@@ -16,6 +16,7 @@
     margin-top: 12%;
     font-family: $main-font;
     transform: translate(-360px, 0);
+    z-index: 2;
   }
   .socials-icon {
     color: #fff;
@@ -65,4 +66,11 @@
   height: 80vh;
   width: 100%;
   background-color: #BFAE87;
+  display: flex;
+  justify-content: center;
+  .fb-post{
+    margin-top: 30px;
+    position: relative;
+    z-index: 0;
+  }
 }
