--- a/src/assets/scss/elements/_contactform.scss
+++ b/src/assets/scss/elements/_contactform.scss
@@ -103,8 +103,19 @@ form input, form textarea {
     display: flex;
     justify-content: space-around;
     font-size: 80px;
+    .fa-square-facebook:hover{
+      color: royalblue;
+    }
+    .fa-instagram:hover{
+      color: transparent;
+      background-image: linear-gradient(45deg, #FFDF98, #E56969, #8A49A1);
+      -webkit-background-clip: text;
+    }
     .socials1-icon{
       color: #8D8572;
+    }
+    .socials1-icon:hover{
+      background-color: transparent;
     }
   }
   .socials2 {
@@ -113,6 +124,9 @@ form input, form textarea {
     font-size: 40px;
     .socials2-icon{
       color: #A57DB4;
+    }
+    .socials2-icon:hover{
+      background-color: transparent;
     }
   }
   .contact-info {
