--- a/src/assets/scss/elements/_footer.scss
+++ b/src/assets/scss/elements/_footer.scss
@@ -50,6 +50,11 @@
       gap: 5px;
 
     }
+    .fa-brands:hover {
+      color: #658F70;
+      cursor: pointer;
+    }
+
   }
   .copyright {
     text-align: right;
