--- a/src/assets/scss/elements/_contactform.scss
+++ b/src/assets/scss/elements/_contactform.scss
@@ -77,6 +77,8 @@ form textarea:focus {
 }
 .form-btn:hover{
   color: #FFDF98;
+  box-shadow: 0 0 20px #FFDF98;
+
 }
 .contacts-form {
   display: flex;
