--- a/src/assets/scss/elements/_header.scss
+++ b/src/assets/scss/elements/_header.scss
@@ -1,57 +1,3 @@
-//.header__wrapper {
-//  background-color: whitesmoke;
-//  width: 100%;
-//  height: 100px;
-//  display: flex;
-//  justify-content: space-around;
-//  align-items: center;
-//  position: sticky;
-//  top: 0;
-//
-//  .menu-list {
-//    display: flex;
-//      font-family: 'Sriracha', cursive;
-//      list-style: none;
-//      text-transform: uppercase;
-//
-//    @media only screen and (max-width: 805px) {
-//      display: grid;
-//      flex-direction: column;
-//    }
-//
-//  }
-//
-//  .menu-list a {
-//    text-decoration: none;
-//  }
-//
-//  .menu-item {
-//    padding: 10px 10px;
-//    color: #BFAE87;
-//    margin-right: 20px;
-//    font-size: 1.6rem;
-//
-//  }
-//
-//  .menu-item:hover {
-//    color: #A57DB4;
-//  }
-//
-//  .logo-text {
-//    font-size: 4rem;
-//    font-family: 'Arizonia', cursive;
-//    letter-spacing: 2px;
-//    background-image: linear-gradient(270deg, #A57DB4, #BFAE87);
-//    -webkit-background-clip: text;
-//    color: transparent;
-//
-//    @media only screen and (max-width: 600px) {
-//      text-wrap: normal;
-//      font-size: 3rem;
-//    }
-//  }
-//
-//}
 .header__wrapper {
   background-color: whitesmoke;
   height: 100px;
@@ -74,7 +20,7 @@
       padding-right: 20px;
     }
     @media only screen and (max-width: 439px){
-      padding-bottom: 0 10px;
+      padding: 0 10px;
     }
 
   }
