--- a/src/assets/scss/elements/_bookalesson.scss
+++ b/src/assets/scss/elements/_bookalesson.scss
@@ -1,5 +1,22 @@
 .bookalesson__wrapper {
-  background-color: #BFAE87;
+  height: 70dvh;
+  background-color: white;
   color: blue;
+}
+
+
+
+.react-calendar {
+  margin-top: 100px;
+  display: inline;
+
+}
+
+.close-btn {
+  cursor: pointer;
+}
+.form-container {
+  margin-left: 30%;
+  color: #594C5D;
 }
 
