--- a/src/assets/scss/elements/_aboutme.scss
+++ b/src/assets/scss/elements/_aboutme.scss
@@ -100,6 +100,9 @@
       color: whitesmoke;
       padding: 10px 0;
       font-family: $main-font;
+      .btn-text {
+        text-decoration: none;
+      }
     }
   }
 }
