trying some new fonts

--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -7,3 +7,7 @@
 @import "elements/contactform";
 @import "elements/aboutme";
 @import "elements/bookalesson";
+
+html {
+  font-family: 'Dosis', cursive;
+}
