--- a/src/assets/scss/elements/_bookalesson.scss
+++ b/src/assets/scss/elements/_bookalesson.scss
@@ -2,13 +2,16 @@
   height: 70dvh;
   background-color: white;
   color: blue;
+  font-family: 'Dosis', cursive;
 }
+
 
 
 
 .react-calendar {
   margin-top: 100px;
   display: inline;
+
 
 }
 
