fixing react-calendar fonts

--- a/src/assets/scss/elements/_bookalesson.scss
+++ b/src/assets/scss/elements/_bookalesson.scss
@@ -5,12 +5,22 @@
   font-family: 'Dosis', cursive;
 }
 
+.react-calendar__navigation__label {
+  font-family: 'Dosis', cursive;
+}
 
+#root > section > div.calendar-container > div > div.react-calendar__viewContainer > div > div > div > div.react-calendar__month-view__days > button.react-calendar__tile.react-calendar__tile--active.react-calendar__tile--range.react-calendar__tile--rangeStart.react-calendar__tile--rangeEnd.react-calendar__tile--rangeBothEnds.react-calendar__month-view__days__day {
+  font-family: 'Dosis', cursive;
+}
 
+.react-calendar__month-view__days, .react-calendar__month-view__weekdays {
+  font-family: 'Dosis', cursive;
+}
 
 .react-calendar {
   margin-top: 100px;
   display: inline;
+  font-family: 'Dosis', cursive;
 
 
 }
