adding some box-shadow on footer

--- a/src/assets/scss/elements/_header.scss
+++ b/src/assets/scss/elements/_header.scss
@@ -8,6 +8,7 @@
   position: sticky;
   top: 0;
   z-index: 100;
+  box-shadow: 0 0 4px #BFAE87;
   .logo-text {
     font-family: 'Arizonia', cursive;
     background-image: linear-gradient(270deg, #A57DB4, #BFAE87);
