react-calendar font-size adjust

--- a/src/assets/scss/elements/_bookalesson.scss
+++ b/src/assets/scss/elements/_bookalesson.scss
@@ -7,6 +7,7 @@
 
 .react-calendar__navigation__label {
   font-family: 'Dosis', cursive;
+  text-transform: uppercase;
 }
 
 #root > section > div.calendar-container > div > div.react-calendar__viewContainer > div > div > div > div.react-calendar__month-view__days > button.react-calendar__tile.react-calendar__tile--active.react-calendar__tile--range.react-calendar__tile--rangeStart.react-calendar__tile--rangeEnd.react-calendar__tile--rangeBothEnds.react-calendar__month-view__days__day {
@@ -15,6 +16,7 @@
 
 .react-calendar__month-view__days, .react-calendar__month-view__weekdays {
   font-family: 'Dosis', cursive;
+  color: #BFAE87;
 }
 
 .react-calendar {
